Back - Refactoring DTOs